# open-drone

./: .clang-format  .gitignore  CMakeLists.txt  Justfile  README.md  compile_commands.json  docker-compose.yml  simulation_output.csv
.cache/clangd/index/: ArithmeticSequence.h.152E333D34CCAFEB.idx  Array.h.E6C29951A388E05E.idx  ArrayBase.h.79502974B8F351DC.idx  ArrayCwiseBinaryOps.h.F11351EAEF3F8C06.idx  ArrayCwiseUnaryOps.h.2FAFE05375BE9CD8.idx  ArrayWrapper.h.412438724CAD87C4.idx  Assign.h.EE6BC82CD8FF191D.idx  AssignEvaluator.h.A4A5748D6A094219.idx  AssignmentFunctors.h.4A9E406C3C123421.idx  BandMatrix.h.45D1BDE96F262E0F.idx  BinaryFunctors.h.526EC22E8E80106D.idx  BlasUtil.h.D389E3980E0E3B0D.idx  Block.h.14E17E03A5705026.idx  BlockMethods.h.6BA316D989F08902.idx  BooleanRedux.h.025031827A7C033E.idx  CommaInitializer.h.FFF473B9E235D0BF.idx  CommonCwiseBinaryOps.h.50072444BCF41A9A.idx  CommonCwiseUnaryOps.h.E35136D91366FF7A.idx  Complex.h.7C6198CD514B3A64.idx  Complex.h.BEAC19B6812A19BC.idx  ConditionEstimator.h.4DE13B7AD6790EBD.idx  ConjHelper.h.3FB5E62E663EF769.idx  Constants.h.0E95805D73943EC2.idx  Core.6A84965A84ED6284.idx  CoreEvaluators.h.DB0DE56EF5C0BC15.idx  CoreIterators.h.9778CF82E5D0D18F.idx  CwiseBinaryOp.h.990E993A84A291EC.idx  CwiseNullaryOp.h.7BE3D790F1C78DC1.idx  CwiseTernaryOp.h.674FC0B04A5FC2BA.idx  CwiseUnaryOp.h.79B434D84D59C064.idx  CwiseUnaryView.h.C65CFB3AC40F8981.idx  DenseBase.h.C7B397E56ECBE541.idx  DenseCoeffsBase.h.96A1D04FA4A0B7F0.idx  DenseStorage.h.16F912B652C80F0D.idx  Diagonal.h.1A231FFFBA8319CE.idx  DiagonalMatrix.h.63BF927EF9DFE201.idx  DiagonalProduct.h.F70AEC7A1C5C87B1.idx  DisableStupidWarnings.h.9B59D189131156E5.idx  Dot.h.710A6509C25E10DA.idx  EigenBase.h.8EF103CE81CCABCE.idx  (+141 more)
.devcontainer/: Dockerfile  devcontainer.json
core/: CMakeLists.txt
core/estimation/: CMakeLists.txt  mekf.cpp
include/core/estimation/: mekf.hpp
include/core/math/: matrix.hpp  quaternion.hpp  vector3f.hpp
include/core/utils/: arange.hpp  export_to_csv.hpp
include/pico/sensors/: mpu9250.hpp
include/sim/math/numerical_methods/: forward_euler.hpp  rk4.hpp  rk4_step.hpp
include/sim/physics/: compute_flight_conditions.hpp  flat_earth_eom.hpp  flat_earth_model.hpp  rigid_body_6dof_model.hpp  ussa1976.hpp
include/sim/types/: aux_data.hpp  drone_state.hpp  external_loads.hpp  flight_conditions.hpp
include/sim/utils/: arange.hpp  export_to_csv.hpp
include/sim/validation/: case1_loads.hpp  case2_loads.hpp  case3_loads.hpp
include/sim/vehicle_models/: brick_vehicle.hpp  brick_vehicle_damped.hpp  sphere_vehicle.hpp
platform/pico/: CMakeLists.txt  main.cpp
platform/pico/sensors/: CMakeLists.txt  mpu9250.cpp
sim/: CMakeLists.txt  main.cpp  validate_case_01.cpp  validate_case_02.cpp  validate_case_03.cpp
sim/physics/: CMakeLists.txt
sim/src/physics/: CMakeLists.txt  compute_flight_conditions.cpp  flat_earth_model.cpp  ussa1976.cpp
sim/validation/: plot_sim_results.py
sim/validation/drone/sim_results_csv/: sim_data_01.csv
sim/validation/nesc_cases/case_01/: config.py
sim/validation/nesc_cases/case_01/sim_results_csv/: sim_data_01.csv
sim/validation/nesc_cases/case_02/: config.py
sim/validation/nesc_cases/case_02/sim_results_csv/: sim_data_02.csv
sim/validation/nesc_cases/case_03/: config.py
sim/validation/nesc_cases/case_03/sim_results_csv/: sim_data_03.csv
sim/validation/plotting/: compare.py  groups.py  maps.py  style.py
